[package]
name = "between"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ['full'] }
anyhow = "1"
bytes = "1"
tokio-tungstenite = "0.29"
futures-util = "0.3"
config = { version = "0.15", features = ['toml'] }
serde = { version = "1", features = ["derive"] }
simplelog = "0.12"
log = "0.4"
serde_json = "1"
base64 = "0.22"